fix button text align

--- a/src/components/todo-list-item/todo-list-item.css
+++ b/src/components/todo-list-item/todo-list-item.css
@@ -33,6 +33,7 @@
   padding: 0;
   margin: 0;
   cursor: pointer;
+  text-align: left;
   transition: box-shadow .15s;
 }
 
